Fixed chat bar for bottom aligned input tag

--- a/Themes/Material-Discord/src/_selectorPlaceholders.scss
+++ b/Themes/Material-Discord/src/_selectorPlaceholders.scss
@@ -2011,6 +2011,9 @@
 .channelAppLauncher_e6e74f {
     @extend %channelAppLauncher !optional;
 }
+.buttonContainer_e6e74f {
+	@extend %channelAppLauncherButtonContainer !optional;
+}
 .button_e6e74f {
     @extend %channelAppLauncherButton !optional;
 }
@@ -2079,6 +2082,12 @@
 }
 .button__74017 {
 	@extend %channelTextAreaButton !optional;
+}
+.button__24af7 {
+	@extend %channelTextAreaButtonInner !optional;
+}
+.noHover__24af7 {
+	@extend %channelTextAreaButtonInnerNoHover !optional;
 }
 .emojiButton__04eed {
 	@extend %channelTextAreaEmojiButton !optional;
@@ -7315,6 +7324,9 @@ pre {
 .wrapper__44b0c {
 	@extend %avatarWrapper !optional;
 }
+.avatarDecoration__44b0c {
+	@extend %avatarStatusDecoration !optional;
+}
 .avatar__44b0c {
 	@extend %avatarImage !optional;
 }
@@ -7333,14 +7345,8 @@ pre {
 .avatarDecoration_c19a55 {
 	@extend %avatarDecoration !optional;
 }
-.avatarOffline-3GF27z {
-	@extend %avatarOffline !optional;
-}
 .avatarUploaderInner_ab876d {
 	@extend %avatarUploaderInner !optional;
-}
-.avatarUploaderHint-2ZdBlc {
-	@extend %avatarUploaderHint !optional;
 }
 .botTag__82f07 {
 	@extend %botTag !optional;
@@ -7395,21 +7401,6 @@ pre {
 }
 .addButtonIcon__48c1c {
 	@extend %roleAddButtonIcon !optional;
-}
-.roleWrapper-2IhvNd {
-	@extend %roleWrapper !optional;
-}
-.overflowButton-19oxmH {
-	@extend %roleOverflowButton !optional;
-}
-.overflowIcon-863s2Z {
-	@extend %roleOverflowIcon !optional;
-}
-.container-3ssFyj {
-	@extend %rolePreviewPopout !optional;
-}
-.item-1BCeuB {
-	@extend %rolePreviewItem !optional;
 }
 .role_deddac {
 	@extend %channelroles !optional
@@ -11212,6 +11203,9 @@ pre {
 
 .client-theme-color-picker {
     @extend %clientThemeColorPicker !optional;
+}
+.align-chat-input {
+    @extend %alignChatInput !optional;
 }
 .visual-refresh {
     @extend %visualRefresh !optional;
