--- a/Themes/Material-Discord/src/beta/_visualRefresh.scss
+++ b/Themes/Material-Discord/src/beta/_visualRefresh.scss
@@ -636,9 +636,18 @@
         }
 
         %channelTextAreaAttachWrapper {
-            left: calc(var(--main-textarea-inner-padding) * 2);
+            width: calc(var(--main-textarea-height) - var(--main-textarea-inner-padding) * 2);
+            height: calc(var(--main-textarea-height) - var(--main-textarea-inner-padding) * 2);
             margin-right: calc((42px + var(--main-textarea-inner-padding)) * -1);
+            padding: 0;
             z-index: 2;
+        }
+
+        %channelTextAreaAttachButton {
+            width: inherit;
+            height: inherit;
+            margin: 0;
+            padding: 0;
         }
 
         %channelTextAreaCommandIconWrapper {
@@ -665,7 +674,7 @@
 
         %slateTextArea {
             min-height: calc(var(--main-textarea-height) - (var(--main-textarea-inner-padding) * 2));
-            margin-left: calc((var(--main-textarea-inner-padding) * 3) + 32px);
+            margin-left: calc((var(--main-textarea-inner-padding) * 3) + 36px);
             padding: calc(((var(--main-textarea-height) - (var(--main-textarea-inner-padding) * 2)) - var(--chat-markup-line-height)) / 2) var(--space-16) calc(((var(--main-textarea-height) - (var(--main-textarea-inner-padding) * 2)) - var(--chat-markup-line-height)) / 2) 0;
         }
     }
@@ -684,10 +693,6 @@
         min-height: var(--custom-channel-textarea-text-area-height);
         justify-content: center;
         align-items: center;
-    }
-
-    %channelTextAreaAttachButton {
-        padding-right: var(--space-8);
     }
 
     %channelInfo {
@@ -1980,6 +1985,24 @@
 
         %discoverSidebarNavItem {
             border-radius: 22px;
+        }
+    }
+}
+
+%alignChatInput {
+    %channelTextAreaAttachButtonInner,
+    %channelTextAreaEmojiButton,
+    %channelAppLauncherButtonContainer {
+        &:hover {
+            background-color: transparent;
+        }
+    }
+
+    %channelTextAreaButtonInner {
+        &:not(%channelTextAreaButtonInnerNoHover) {
+            &:hover {
+                background-color: transparent;
+            }
         }
     }
 }
