--- a/Themes/Material-Discord/src/clients/betterdiscord/_settings.scss
+++ b/Themes/Material-Discord/src/clients/betterdiscord/_settings.scss
@@ -26,6 +26,10 @@
             font-size: 18px;
             font-weight: 400;
             cursor: pointer;
+
+			&:before {
+				display: none;
+			}
         }
 
         %bdSettingsContainer {
