--- a/Themes/Material-Discord/src/popouts/_search.scss
+++ b/Themes/Material-Discord/src/popouts/_search.scss
@@ -23,15 +23,22 @@
 			display: none;
 		}
 
-		%searchPopoutLearnMore a,
-		%searchPopoutClearHistory {
-			color: var(--text-normal);
-		}
-
 		%searchPopoutLearnMore,
 		%searchPopoutClearHistory {
-	        top: 16px;
-	    }
+			width: 32px;
+            height: 32px;
+            top: 8px;
+            right: 4px;
+			margin-top: -40px;
+		}
+
+		%searchPopoutLearnMore a,
+		%searchPopoutClearHistory {
+			display: flex;
+            align-items: center;
+            justify-content: center;
+			color: var(--text-normal);
+		}
 	}
 
     %searchPopoutHeader {
